--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <li><a href="#resume">Resume</a></li>
               <li><a href="#portfolio">Portfolio</a></li>
               <li><a href="#testimonials">testimonials</a></li>
-             <!-- <li><a href="#blog">blog</a></li> -->
+              <li><a href="#blog">blog</a></li> 
               <li><a href="#contact">Contact</a></li>
             </ul>
           </nav>
@@ -52,7 +52,7 @@
           <li><a href="#resume">Resume</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#testimonials">testimonials</a></li>
-          <!--<li><a href="#blog">blog</a></li> -->
+          <li><a href="#blog">blog</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
@@ -69,7 +69,7 @@
         </div>
         <div class="col-md-8">
           <p class="personal-profile__name">Amit Kumar_</p>
-          <p class="personal-profile__work">Machine Learning Engineer, FullStack Web Developer</p>
+          <p class="personal-profile__work">Machine Learning | Deep Learning Enthusiastic | FullStack Web Developer</p>
           <div class="personal-profile__contacts">
             <dl class="contact-list contact-list__opacity-titles">
               <dt>Age:</dt>
@@ -83,7 +83,7 @@
             </dl>
           </div>
           <p class="personal-profile__social">
-            <a href="#" target="_blank"><i class="fa fa-github"></i></a>
+            <a href="https://github.com/Ellipticamit" target="_blank"><i class="fa fa-github"></i></a>
             <a href="#" target="_blank"><i class="fa fa-linkedin-square"></i></a>
             <a href="#" target="_blank"><i class="fa fa-facebook-square"></i></a>
           </p>
@@ -434,7 +434,7 @@
   </div>
 <!--Testimonials-->
 
-<!--Blog-
+<!--Blog-->
   <section id="blog" class="container section">
     <div class="row">
       <div class="col-md-12">
@@ -444,16 +444,16 @@
 
     <div class="row post-cards">
       <div class="col-md-4">
-        <a href="blog.html">
+        <a href="haberman_cancer_survival_data_visualisation.html">
           <div class="post-cards__card">
             <div class="post-cards__img">
-              <img src="assets/img/img_blog_1.png" alt="blog_img">
+              <img src="img/haberman.jpg" alt="blog_img">
             </div>
             <div class="post-cards__info">
-              <p class="post-cards__date">October 22, 2017</p>
-              <h3 class="post-cards_title">How to use css-preprocessor</h3>
-              <p class="post-cards_description">Lorem ipsum dolor sit amet, consectetur
-                adipisicing elit, sed do eiusmod tempr incididunt...
+              <p class="post-cards__date">July 21, 2018</p>
+              <h3 class="post-cards_title">Haberman's Cancer Survival - Exploratory Data Analysis (EDA)
+</h3>
+              <p class="post-cards_description" align="justify">Explatory Data Analysis(EDA) is an approach to analyzing data sets to describe and summarize their characteristics using the visual methods...
               </p>
             </div>
           </div>
@@ -493,7 +493,7 @@
       </div>
     </div>
   </section>
-  -->
+  
 <!--Blog-->
 
 <!--Contact-->
