--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
         <a href="haberman_cancer_survival_data_visualisation.html">
           <div class="post-cards__card">
             <div class="post-cards__img">
-              <img src="https://ellipticamit.github.io/img/haberman.jpg" alt="blog_img">
+              <img src="img/haberman.jpg" alt="blog_img">
             </div>
             <div class="post-cards__info">
               <p class="post-cards__date">July 21, 2018</p>
