--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
             <ul>
               <li><a href="#hello">Hello</a></li>
               <li><a href="#resume">Resume</a></li>
-              <li><a href="#portfolio">Portfolio</a></li>
-              <li><a href="#testimonials">testimonials</a></li>
               <li><a href="#blog">blog</a></li> 
               <li><a href="#contact">Contact</a></li>
             </ul>
@@ -50,8 +48,6 @@
         <ul>
           <li><a href="#hello">Hello</a></li>
           <li><a href="#resume">Resume</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#testimonials">testimonials</a></li>
           <li><a href="#blog">blog</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -99,7 +95,7 @@
       <div class="col-md-10">
         <h2 id="hello_header" class="section__title">Hi_</h2>
         <p class="section__description">
-          Currently I am working as a machine learning engineer espically in the field of deep learning. My area of expertise is Computer Vision because it fasinate me a lot. Previously i work as fullstack web developer where i created a lot web application as well facebook application from scratch. I also worked on Android application to implement my computer vision algorithm.
+          I am Amit. 
         </p>
         <a href="#" class="section_btn site-btn"><img src="assets/img/img_btn_icon.png" alt="">Download CV</a>
       </div>
@@ -115,10 +111,7 @@
       <div class="col-md-10">
         <h2 id="resume_header" class="section__title">Resume_</h2>
         <p class="section__description">
-          Lorem ipsum dolor sit amet, <i><b>communication</b></i> adipisicing elit, <i><b>helpful</b></i> eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud <i><b>sence of
-          humour</b></i> ullamco laboris nisi ut <i><b>honest</b></i> ea commodo consequat. Duis aute irure dolor in
-          upper-intermediate english level velit  dolore eu ivivdtevoluptatem ontend developer.
+    
         </p>
       </div>
     </div>
@@ -153,16 +146,30 @@
         <h3 class="resume-list_title">employment</h3>
         <div class="resume-list__block">
           <p class="resume-list__block-title">Hack'a'Holic IT Services Pvt. Ltd.</p>
-          <p class="resume-list__block-date">2014 - 2016</p>
+          <p class="resume-list__block-date">May, 2014 - June, 2015</p>
+          <p>
+             Full Stack Developer and Facebook App Developer
+          </p>
+        </div>
+		<div class="resume-list__block">
+          <p class="resume-list__block-title">Freelancer</p>
+          <p class="resume-list__block-date">July 2015 - Jan, 2016</p>
           <p>
              Full Stack Developer and Facebook App Developer
           </p>
         </div>
         <div class="resume-list__block">
           <p class="resume-list__block-title">SenzecIT</p>
-          <p class="resume-list__block-date">20016 - 2017</p>
+          <p class="resume-list__block-date">Feb 2016 - Jan 2017</p>
           <p>
-            Machine Lerning Engineer
+            Software Enginer
+          </p>
+        </div>
+		<div class="resume-list__block">
+          <p class="resume-list__block-title">KiwiSoft Technologies</p>
+          <p class="resume-list__block-date">Feb 2017 - Till Now</p>
+          <p>
+            Software Enginer
           </p>
         </div>
       </div>
@@ -259,180 +266,7 @@
   </section>
 <!--Resume-->
 
-<!--Portfolio-->
-  <section id="portfolio" class="container section">
-    <div class="row">
-      <div class="col-md-12">
-        <h2 id="portfolio_header" class="section__title">My projects_</h2>
-      </div>
-    </div>
-    <div class="row portfolio-menu">
-      <div class="col-md-12">
-        <nav>
-          <ul>
-            <li><a href="#" data-portfolio-target-tag="all">all</a></li>
-            <li><a href="#" data-portfolio-target-tag="mobile apps">ML Mobile apps</a></li>
-            <li><a href="#" data-portfolio-target-tag="web-sites">web-sites</a></li>
-            <li><a href="#" data-portfolio-target-tag="landing-pages">facebook apps</a></li>
-          </ul>
-        </nav>
-      </div>
-    </div>
-    <div class="portfolio-cards">
-      <div class="row project-card" data-toggle="modal" data-target="#portfolioModal" data-portfolio-tag="web-sites">
-        <div class="col-md-6 col-lg-5 project-card__img">
-          <img class="" src="assets/img/img_project_1_mono.png" alt="project-img">
-        </div>
-        <div class="col-md-6 col-lg-7 project-card__info">
-          <h3 class="project-card__title">Mobile and desktop app for London hostel store  </h3>
-          <p class="project-card__description">
-            Do answered bachelor occasion in of offended no concerns. Supply worthy warmth branch of no ye.
-            Voice tried known to as my to. Though wished merits or be. Alone visit use these smart rooms ham.
-          </p>
-          <p class="project-card__stack">Used stack:</p>
-          <ul class="tags">
-            <li>html5</li>
-            <li>css3</li>
-            <li>JavaScript</li>
-            <li>bower</li>
-            <li>grunt</li>
-          </ul>
-          <a href="#" class="project-card__link">www.superapp.com</a>
-        </div>
-      </div>
-      <div class="row project-card"  data-toggle="modal" data-target="#portfolioModal" data-portfolio-tag="mobile apps">
-        <div class="col-md-6 col-lg-5 project-card__img">
-          <img class="" src="assets/img/img_project_2_mono.png" alt="project-img">
-        </div>
-        <div class="col-md-6 col-lg-7 project-card__info">
-          <h3 class="project-card__title">Web app page for trevel company</h3>
-          <p class="project-card__description">
-            Preference any astonished unreserved mrs. Prosperous understood middletons in conviction an
-             uncommonly do. Supposing so be resolving breakfast am or perfectly. Is drew am hill from mr.
-          </p>
-          <p class="project-card__stack">Used stack:</p>
-          <ul class="tags">
-            <li>html5</li>
-            <li>css3</li>
-            <li>JavaScript</li>
-            <li>BEM</li>
-            <li>bower</li>
-            <li>grunt</li>
-          </ul>
-          <a href="#" class="project-card__link">www.travellend.com</a>
-        </div>
-      </div>
-      <div class="row project-card"  data-toggle="modal" data-target="#portfolioModal" data-portfolio-tag="landing-pages">
-        <div class="col-md-6 col-lg-5 project-card__img">
-        <img class="" src="assets/img/img_project_3_mono.png" alt="project-img">
-      </div>
-        <div class="col-md-6 col-lg-7 project-card__info">
-        <h3 class="project-card__title">Admin template for Photo Service</h3>
-        <p class="project-card__description">
-          Do answered bachelor occasion in of offended no concerns. Supply worthy warmth branch of no ye.
-          Voice tried known to as my to. Though wished merits or be. Alone visit use these smart rooms ham.
-        </p>
-        <p class="project-card__stack">Used stack:</p>
-        <ul class="tags">
-          <li>html5</li>
-          <li>css3</li>
-          <li>JavaScript</li>
-          <li>BEM</li>
-          <li>bower</li>
-          <li>grunt</li>
-        </ul>
-        <a href="#" class="project-card__link">www.coolphoto.com</a>
-      </div>
-      </div>
-    </div>
-  </section>
-<!--Portfolio-->
 
-<!--Testimonials-->
-  <div id="testimonials" class="section">
-    <div class="background slider-carousel" style="background-image: url(assets/img/img_bg_main.jpg);">
-      <div class="container">
-        <div id="carouselTestimonials" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselTestimonials" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselTestimonials" data-slide-to="1"></li>
-            <li data-target="#carouselTestimonials" data-slide-to="2"></li>
-            <li data-target="#carouselTestimonials" data-slide-to="3"></li>
-          </ol>
-          <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active">
-              <div class="row">
-                <div class="col-md-10 col-sm-10 col-10 mr-auto ml-auto">
-                  <p class="slider-carousel__title">Antonio Anderson</p>
-                  <p class="slider-carousel__caption">Project: Landin page for travel company</p>
-                  <hr>
-                  <p class="slider-carousel__description">Up or well must less rent read walk so be. Easy
-                    sold at do hour sing spot. Any meant has cease too the decay. Since party burst am
-                    it match. By or blushes between besides offices noisier as. Sending do brought winding
-                    compass in. Easy sold at do hour sing spot less rent read walk so be. Any meant has
-                    cease too the decay. </p>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="row">
-                <div class="col-md-10 col-sm-10 col-10 mr-auto ml-auto">
-                  <p class="slider-carousel__title">Antonio Anderson</p>
-                  <p class="slider-carousel__caption">Project: Landin page for travel company</p>
-                  <hr>
-                  <p class="slider-carousel__description">Up or well must less rent read walk so be. Easy
-                    sold at do hour sing spot. Any meant has cease too the decay. Since party burst am
-                    it match. By or blushes between besides offices noisier as. Sending do brought winding
-                    compass in. Easy sold at do hour sing spot less rent read walk so be. Any meant has
-                    cease too the decay. </p>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="row">
-                <div class="col-md-10 col-sm-10 col-10 mr-auto ml-auto">
-                  <p class="slider-carousel__title">Antonio Anderson</p>
-                  <p class="slider-carousel__caption">Project: Landin page for travel company</p>
-                  <hr>
-                  <p class="slider-carousel__description">Up or well must less rent read walk so be. Easy
-                    sold at do hour sing spot. Any meant has cease too the decay. Since party burst am
-                    it match. By or blushes between besides offices noisier as. Sending do brought winding
-                    compass in. Easy sold at do hour sing spot less rent read walk so be. Any meant has
-                    cease too the decay. </p>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="row">
-                <div class="col-md-10 col-sm-10 col-10 mr-auto ml-auto">
-                  <p class="slider-carousel__title">Antonio Anderson</p>
-                  <p class="slider-carousel__caption">Project: Landin page for travel company</p>
-                  <hr>
-                  <p class="slider-carousel__description">Up or well must less rent read walk so be. Easy
-                    sold at do hour sing spot. Any meant has cease too the decay. Since party burst am
-                    it match. By or blushes between besides offices noisier as. Sending do brought winding
-                    compass in. Easy sold at do hour sing spot less rent read walk so be. Any meant has
-                    cease too the decay. </p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <a class="carousel-control-prev" href="#testimonials" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#testimonials" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-          <div class="slider-carousel__circle">
-            <p><i class="fa fa-quote-right" aria-hidden="true"></i></p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-<!--Testimonials-->
 
 <!--Blog-->
   <section id="blog" class="container section">
@@ -459,38 +293,8 @@
           </div>
         </a>
       </div>
-      <div class="col-md-4">
-        <a href="blog.html">
-          <div class="post-cards__card">
-            <div class="post-cards__img">
-              <img src="assets/img/img_blog_2.png" alt="blog_img">
-            </div>
-            <div class="post-cards__info">
-              <p class="post-cards__date">October 22, 2017</p>
-              <h3 class="post-cards_title">How I organize my work with code</h3>
-              <p class="post-cards_description">Lorem ipsum dolor sit amet, consectetur
-                adipisicing elit, sed do eiusmod tempr incididu...
-              </p>
-            </div>
-          </div>
-        </a>
-      </div>
-      <div class="col-md-4">
-        <a href="blog.html">
-          <div class="post-cards__card">
-            <div class="post-cards__img">
-              <img src="assets/img/img_blog_3.png" alt="blog_img">
-            </div>
-            <div class="post-cards__info">
-              <p class="post-cards__date">October 22, 2017</p>
-              <h3 class="post-cards_title">SVG sprites vs Icon Font</h3>
-              <p class="post-cards_description">Lorem ipsum dolor sit amet, consectetur
-                adipisicing elit, sed do eiusmod tempr incididu...
-              </p>
-            </div>
-          </div>
-        </a>
-      </div>
+ 
+    
     </div>
   </section>
   
