social_media_link

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <p class="personal-profile__social">
             <a href="https://github.com/Ellipticamit" target="_blank"><i class="fa fa-github"></i></a>
             <a href="#" target="_blank"><i class="fa fa-linkedin-square"></i></a>
-            <a href="#" target="_blank"><i class="fa fa-facebook-square"></i></a>
+            <a href="https://facebook.com/Ellipticamit/" target="_blank"><i class="fa fa-facebook-square"></i></a>
           </p>
         </div>
       </div>
@@ -313,44 +313,24 @@
           <div class="contacts__list">
             <dl class="contact-list">
               <dt>Phone:</dt>
-              <dd><a href="tel:82344563333">+91-790-399-5655</a></dd>
+              <dd><a href="tel:7903995655">+91-790-399-5655</a></dd>
               <dt>Skype:</dt>
-              <dd><a href="skype:iamivanovivan">amit.kumar9119</a></dd>
+              <dd><a href="skype:amit.kumar9119">amit.kumar9119</a></dd>
               <dt>Email:</dt>
-              <dd><a href="mailto:mail@mail.com">ellipticamit@mail.com</a></dd>
+              <dd><a href="mailto:ellipticamit@gmail.com">ellipticamit@mail.com</a></dd>
             </dl>
           </div>
-          <div class="contacts__social">
-            <ul>
-              <li><a href="#">Facebook</a></li>
-              <li><a href="#">Linkedin</a></li>
-              <li><a href="#">GitHub</a></li>
-              <li><a href="#">Bitbucket</a></li>
-            </ul>
-          </div>
+          
         </div>
         <div class="col-md-7 col-lg-5">
-          <div class="contacts__form">
-            <p class="contacts__form-title">Or just write me a letter here_</p>
-            <form class="js-form">
-              <div class="form-group">
-                <input class="form-field js-field-name" type="text" placeholder="Your name" required>
-                <span class="form-validation"></span>
-                <span class="form-invalid-icon"><i class="mdi mdi-close" aria-hidden="true"></i></span>
-              </div>
-              <div class="form-group">
-                <input class="form-field js-field-email" type="email"  placeholder="Your e-mail" required>
-                <span class="form-validation"></span>
-                <span class="form-invalid-icon"><i class="mdi mdi-close" aria-hidden="true"></i></span>
-              </div>
-              <div class="form-group">
-                <textarea class="form-field js-field-message" placeholder="Type the message here" required></textarea>
-                <span class="form-validation"></span>
-                <span class="form-invalid-icon"><i class="mdi mdi-close" aria-hidden="true"></i></span>
-              </div>
-              <button class="site-btn site-btn--form" type="submit" value="Send">Send</button>
-            </form>
+			<div class="contacts__social">
+            <ul>
+              <li><a href="https://facebook.com/Ellipticamit/">Facebook</a></li>
+              <li><a href="#">Linkedin</a></li>
+              <li><a href="https://github.com/Ellipticamit/">GitHub</a></li>
+            </ul>
           </div>
+          
           <div class="footer">
             <p>© 2018 Amit Kumar. All Rights Reserved</p>
           </div>
