--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <ul>
               <li><a href="#hello">Hello</a></li>
               <li><a href="#resume">Resume</a></li>
+			  <li><a href="#projects">Projects</a></li>
               <li><a href="#blog">blog</a></li> 
               <li><a href="#contact">Contact</a></li>
             </ul>
@@ -65,7 +66,7 @@
         </div>
         <div class="col-md-8">
           <p class="personal-profile__name">Amit Kumar_</p>
-          <p class="personal-profile__work">Machine Learning | Deep Learning Enthusiastic | FullStack Web Developer</p>
+          <p class="personal-profile__work">Machine Learning | Deep Learning Enthusiastic | Frontend Web Developer</p>
           <div class="personal-profile__contacts">
             <dl class="contact-list contact-list__opacity-titles">
               <dt>Age:</dt>
@@ -76,6 +77,8 @@
               <dd><a href="mailto:mail@mail.com">ellipticamit@mail.com</a></dd>
               <dt>Address:</dt>
               <dd>Lajput Nagar, New Delhi, India</dd>
+			  <dt>Skills:</dt>
+              <dd>ReactJs, Redux, JavaScript, Gulp, WebPack, NodeJs, Express, Angular, Python, OpenCV, Tensorflow, PyTorch, Highcharts </dd>
             </dl>
           </div>
           <p class="personal-profile__social">
@@ -94,8 +97,8 @@
     <div class="row">
       <div class="col-md-10">
         <h2 id="hello_header" class="section__title">Hi_</h2>
-        <p class="section__description">
-          I am Amit. 
+        <p class="section__description" align="justify">
+          I am a passionate front end developer having more than 4 year of experience in IT industry. Eager to learn new technology. For fun i do competitive programming. Love to solve puzzle and draw sketches.
         </p>
         <a href="#" class="section_btn site-btn"><img src="assets/img/img_btn_icon.png" alt="">Download CV</a>
       </div>
@@ -148,28 +151,35 @@
           <p class="resume-list__block-title">Hack'a'Holic IT Services Pvt. Ltd.</p>
           <p class="resume-list__block-date">May, 2014 - June, 2015</p>
           <p>
-             Full Stack Developer and Facebook App Developer
+               Full Stack Web Developer
           </p>
         </div>
 		<div class="resume-list__block">
           <p class="resume-list__block-title">Freelancer</p>
           <p class="resume-list__block-date">July 2015 - July, 2016</p>
           <p>
-             Full Stack Developer and Facebook App Developer
+             Full Stack Web Developer
           </p>
         </div>
         <div class="resume-list__block">
           <p class="resume-list__block-title">SenzecIT</p>
           <p class="resume-list__block-date">August 2016 - Jan 2018</p>
           <p>
-            Software Enginer
+            Full Stack Web Developer
           </p>
         </div>
 		<div class="resume-list__block">
           <p class="resume-list__block-title">KiwiSoft Technologies</p>
-          <p class="resume-list__block-date">Feb 2018 - Till Now</p>
+          <p class="resume-list__block-date">Feb 2018 - Aug 2018</p>
           <p>
             Software Enginer
+          </p>
+        </div>
+		<div class="resume-list__block">
+          <p class="resume-list__block-title">Vicara Info Tech</p>
+          <p class="resume-list__block-date">Sep 2018 - Till Now</p>
+          <p>
+            Front End Developer
           </p>
         </div>
       </div>
@@ -179,11 +189,53 @@
         <h3 class="progress-list__title">general skills</h3>
       </div>
       <div class="col-md-5 mr-auto">
-        <div class="progress-list__skill">
+		<div class="progress-list__skill">
           <p>
-            <span class="progress-list__skill-title">Python</span>
+            <span class="progress-list__skill-title">JavaScript</span>
+            <span class="progress-list__skill-value">75%</span>
+          </p>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" >
+            </div>
+          </div>
+        </div>
+		<div class="progress-list__skill">
+          <p>
+            <span class="progress-list__skill-title">ReactJs</span>
             <span class="progress-list__skill-value">80%</span>
           </p>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" >
+            </div>
+          </div>
+        </div>
+		
+		<div class="progress-list__skill">
+          <p>
+            <span class="progress-list__skill-title">Gulp</span>
+            <span class="progress-list__skill-value">80%</span>
+          </p>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" >
+            </div>
+          </div>
+        </div>
+	
+		<div class="progress-list__skill">
+		  <p>
+			<span class="progress-list__skill-title">NodeJs</span>
+            <span class="progress-list__skill-value">65%</span>
+		  </p>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" >
+            </div>
+          </div>
+        </div>
+		<div class="progress-list__skill">
+		  <p>
+			<span class="progress-list__skill-title">Python</span>
+            <span class="progress-list__skill-value">80%</span>
+		  </p>
           <div class="progress">
             <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" >
             </div>
@@ -201,17 +253,17 @@
         </div>
         <div class="progress-list__skill">
           <p>
-            <span class="progress-list__skill-title">pythorch</span>
-            <span class="progress-list__skill-value">40%</span>
+            <span class="progress-list__skill-title">Scikit-Learn</span>
+            <span class="progress-list__skill-value">50%</span>
           </p>
           <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+            <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
             </div>
           </div>
         </div>
-        <div class="progress-list__skill">
+		<div class="progress-list__skill">
           <p>
-            <span class="progress-list__skill-title">matplotlib</span>
+            <span class="progress-list__skill-title">Highcharts</span>
             <span class="progress-list__skill-value">50%</span>
           </p>
           <div class="progress">
@@ -221,6 +273,37 @@
         </div>
       </div>
       <div class="col-md-5 mr-auto">
+			
+        <div class="progress-list__skill">
+		  <p>
+			<span class="progress-list__skill-title">Bootstrap</span>
+            <span class="progress-list__skill-value">90%</span>
+		  </p>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" >
+            </div>
+          </div>
+        </div>
+		<div class="progress-list__skill">
+          <p>
+            <span class="progress-list__skill-title">Redux</span>
+            <span class="progress-list__skill-value">80%</span>
+          </p>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" >
+            </div>
+          </div>
+        </div>
+		<div class="progress-list__skill">
+          <p>
+            <span class="progress-list__skill-title">WebPack</span>
+            <span class="progress-list__skill-value">60%</span>
+          </p>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" >
+            </div>
+          </div>
+        </div>
         <div class="progress-list__skill">
           <p>
             <span class="progress-list__skill-title">php</span>
@@ -231,33 +314,43 @@
             </div>
           </div>
         </div>
-        <div class="progress-list__skill">
-          <p>
-            <span class="progress-list__skill-title">javascript</span>
-            <span class="progress-list__skill-value">75%</span>
-          </p>
+		<div class="progress-list__skill">
+		  <p>
+			<span class="progress-list__skill-title">OpenCV</span>
+            <span class="progress-list__skill-value">50%</span>
+		  </p>
           <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+            <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" >
             </div>
           </div>
         </div>
-        <div class="progress-list__skill">
+		<div class="progress-list__skill">
           <p>
-            <span class="progress-list__skill-title">git</span>
-            <span class="progress-list__skill-value">90%</span>
+            <span class="progress-list__skill-title">PyTorch</span>
+            <span class="progress-list__skill-value">40%</span>
           </p>
           <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+            <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
             </div>
           </div>
         </div>
-        <div class="progress-list__skill">
+		<div class="progress-list__skill">
           <p>
-            <span class="progress-list__skill-title">adobe photoshop</span>
-            <span class="progress-list__skill-value">80%</span>
+            <span class="progress-list__skill-title">Keras</span>
+            <span class="progress-list__skill-value">40%</span>
           </p>
           <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+            <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+            </div>
+          </div>
+        </div>
+		<div class="progress-list__skill">
+          <p>
+            <span class="progress-list__skill-title">MatplotLib</span>
+            <span class="progress-list__skill-value">50%</span>
+          </p>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
             </div>
           </div>
         </div>
@@ -266,6 +359,19 @@
   </section>
 <!--Resume-->
 
+<!--Projects-
+  <section id="projects" class="container section">
+    <div class="row">
+      <div class="col-md-12">
+        <h2 id="blog_header" class="section__title">Projects_</h2>
+      </div>
+    </div>
+
+    <div class="row post-cards">
+	
+	</div>
+  </section>
+<!--Projects-->
 
 
 <!--Blog-->
