Text animation adfded

--- a/index.html
+++ b/index.html
@@ -48,11 +48,15 @@
             <div class="section_content">
               <div class="section_item">
                 <h3 class="subtitles">Hi, my name is <span class="primarycolor" >Amit Kumar</span></h3>
-                <h3 class="subtitles">i design and develop Website</h3>
+                <h3 class="subtitles">i design and develop <span class="designtext"></span></h3>
               </div>
-            
+
               <div class="section_item">
-                <p class="explore">Lets me show you </p>
+                <p class="explore">I am Frontend / Full-Stack Developer </p>
+              </div>
+
+              <div class="section_item">
+                <p class="explore">Lets me show you... </p>
               </div>
               </div>
           </div>
@@ -150,11 +154,11 @@
                       <div class="dot">......</div>
                       {
                       <div class="strings">
-                          '2019-now'
+                          '2020-now'
                       </div>
                       :
                       <div class="strings">
-                          'Full-stack Developer/Owner at Pixel Lab'
+                          'Senior Software Engineer at Bed, Bath & Beyond'
                       </div>
                       },
                     </div>
@@ -162,11 +166,11 @@
                       <div class="dot">......</div>
                       {
                       <div class="strings">
-                          '2019-now'
+                          '2019-2020'
                       </div>
                       :
                       <div class="strings">
-                          'Full-stack Developer/Owner at Pixel Lab'
+                          'FrontEnd Consultant at Vichara Infotech'
                       </div>
                       },
                     </div>
@@ -174,11 +178,11 @@
                       <div class="dot">......</div>
                       {
                       <div class="strings">
-                          '2019-now'
+                          '2018-2019'
                       </div>
                       :
                       <div class="strings">
-                          'Full-stack Developer/Owner at Pixel Lab'
+                          'Full-stack Developer at Senzec IT Solutions'
                       </div>
                       },
                     </div>
@@ -186,11 +190,11 @@
                       <div class="dot">......</div>
                       {
                       <div class="strings">
-                          '2019-now'
+                          '2014-2017'
                       </div>
                       :
                       <div class="strings">
-                          'Full-stack Developer/Owner at Pixel Lab'
+                          'Full-stack Developer at Hack'a'Holic IT Services Pvt. Ltd'
                       </div>
                       }
                     </div>
@@ -220,11 +224,11 @@
                       <div class="dot">......</div>
                       {
                       <div class="strings">
-                          '2019-now'
+                          '2010-2014'
                       </div>
                       :
                       <div class="strings">
-                          'Full-stack Developer/Owner at Pixel Lab'
+                          'Bachlor in Computer Science, JECRC, Jaipur', 
                       </div>
                       }
                     </div>
@@ -232,11 +236,11 @@
                       <div class="dot">......</div>
                       {
                       <div class="strings">
-                          '2019-now'
+                          '2007-2009'
                       </div>
                       :
                       <div class="strings">
-                          'Full-stack Developer/Owner at Pixel Lab'
+                          'Senior Secondary, Premalok Mission School, Patna - CBSE'
                       </div>
                       }
                     </div>
@@ -319,8 +323,11 @@
          <div class="cursor__inner cursor__inner-dot"></div>
          <div class="cursor__inner cursor__inner-circle"></div>
       </div>
-      <script src="js/jquery-2.2.4.min.js"></script>
+      <script src="./js/jquery-2.2.4.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
-      <script src="js/myscript.js"></script>
+  
+      <script src="./js/shuffletext.jquery.min.js"></script>
+      <script src="./js/myscript.js"></script>
+    
    </body>
 </html>
