--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <meta name="description" content="Amit Kumar, Full Stack Developer, Amit kumar portfolio, Ellipticamit">
       <meta name="author" content="Amit Kumar">
-      <title>Amit Kumar Portfolio</title>
+      <title>Amit Kumar Portfolio | FrontEnd Developer</title>
       <link rel="stylesheet" href="css/main.css">
       <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono|Inconsolata" rel="stylesheet">
       <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -69,8 +69,37 @@
             <div class="section_title">
                <h6>Work /></h6>
             </div>
-            <div class="section_content">
+          </div>
+        </div>
+        <div id="web" class="web">
+          <div class="row">
+            <div class="col project__1">
+              <div class="project__card">
+                <div class="project__card-image" >
+                    <img src="./img/img_article_photo.jpg" alt="" />
+
+                    <div class="project__card-text">
+                     <div class="t">Indian <br/>Short <br/>Films</div> 
+                     <div class="divider"></div>
+                     <div class="number">00</div>
+                    </div>
+                </div>
+                
               </div>
+            </div>
+            <div class="col project__2">
+              <div class="project__card">
+                <div class="project__card-image" >
+                  <img src="./img/img_article_photo.jpg" alt="" />
+
+                  <div class="project__card-text">
+                   <div class="t">PostCardTrip.in </div> 
+                   <div class="divider"></div>
+                   <div class="number">01</div>
+                  </div>
+              </div>
+             </div>
+            </div>
           </div>
         </div>
      </section>
@@ -327,6 +356,8 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
   
       <script src="./js/shuffletext.jquery.min.js"></script>
+      <script src="./js/jquery.plate.js"></script>
+
       <script src="./js/myscript.js"></script>
     
    </body>
