Wrok Link Added

--- a/index.html
+++ b/index.html
@@ -76,13 +76,16 @@
             <div class="col project__1">
               <div class="project__card">
                 <div class="project__card-image" >
-                    <img src="./img/img_article_photo.jpg" alt="" />
+                  <a href="https://www.indianshortfilms.net/" target="_blank">
+                    <img src="./img/indianshortfilms.png" alt="" />
 
                     <div class="project__card-text">
                      <div class="t">Indian <br/>Short <br/>Films</div> 
                      <div class="divider"></div>
                      <div class="number">00</div>
+                     <div class="online_link">Check Link -></div>
                     </div>
+                    </a>
                 </div>
                 
               </div>
@@ -90,13 +93,17 @@
             <div class="col project__2">
               <div class="project__card">
                 <div class="project__card-image" >
-                  <img src="./img/img_article_photo.jpg" alt="" />
+                  <a href="https://www.postcardtrip.in/" target="_blank">
+                    <img src="./img/postcardtrip.jpg" alt="" />
 
-                  <div class="project__card-text">
-                   <div class="t">PostCardTrip.in </div> 
-                   <div class="divider"></div>
-                   <div class="number">01</div>
-                  </div>
+                    <div class="project__card-text">
+                     <div class="t">PostCardTrip.in </div> 
+                     <div class="divider"></div>
+                     <div class="number">01</div>
+                     <div class="online_link">Check Link -></div>
+                    </div>
+                  </a>
+                 
               </div>
              </div>
             </div>
