--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    <body>
       <header id="header" class="header">
          <div class="main-nav">
-            <div class="logo">Logo</div>
+            <div class="logo"><span><</span>Amit kumar/></div>
             <div class="menu">
                <ul class="nav">
                   <li class="nav-item">
