--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="section_content">
               <div class="section_item">
                 <h3 class="primary subtitles">Amit Kumar</h3>
-                <h5 class="otherfont offwhite">Senior Software Engineer at <span class="white">Bed, Bath and Beyond</span> </h5>
+                <h5 class="otherfont offwhite">Senior Software Engineer at <span class="white">Damco</span> </h5>
               </div>
 
               <div class="section_item">
